more pain and pain

--- a/bancoPOO.html
+++ b/bancoPOO.html
@@ -28,6 +28,8 @@
             }
 
             creditar(valor) {
+                this.saldo += valor;
+                alert("Novo Valor: " + this.saldo);
 
             }
 
@@ -58,7 +60,7 @@
                     valido = true
                 }
             })
-            
+
             if(!valido)
             alert("Conta Inválida!")
         }
