--- a/teste.html
+++ b/teste.html
@@ -36,7 +36,7 @@
                 alert("Você não possui conta.")
             }
             function Debitar() {
-                    let PessoalConta = parseInt(prompt("digite o número da sua conta:"))
+                    let PessoalConta = parseInt(prompt("Digite o número da sua conta:"))
 
                     for (let i = 0; i < contas.length; i++) { /* conferir se a conta existe*/
                         for (let j = 0; j < contas[i].length; j++) {
